Fix index alignment

--- a/frontend/src/blog/blog.css
+++ b/frontend/src/blog/blog.css
@@ -72,6 +72,7 @@ html {
     list-style: none;
     width: fit-content;
     font-size: 16px;
+    margin-right: 2.2%;
   }
   #index li {
     cursor: pointer;
@@ -178,6 +179,7 @@ html {
     list-style: none;
     width: fit-content;
     font-size: 16px;
+    margin-right: 5.5%;
   }
   #index li {
     cursor: pointer;
